# Game-Of-Life

./: .gitignore  CMakeLists.txt  README.md  Test Misha.txt  TestPull  index.html  main.cpp  tests.cpp
Diagrammes/Diagramme_dactivite/: diagramme_d'activité_projet.puml
Diagrammes/Diagramme_de_classes/: diagramme_de_classes_projet.mmd
Diagrammes/Diagramme_de_sequence/: diagramme_de_séquence_projet.mmd
include/: Cell.h  FileManager.h  Grid.h  Interface.h  Rule.h  State.h
src/: Cell.cpp  FileManager.cpp  Grid.cpp  Interface.cpp  Rule.cpp  State.cpp
